[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-listmonk"
description = 'A python sdk for listmonk.app api.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["Python", "API", "REST", "JSON", "SDK", "Newsletter", "Mailing List"]
authors = [
  { name = "Tobi DEGNON", email = "tobidegnon@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["httpx", "attrs", "cattrs", "pendulum"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Tobi-De/py-listmonk#readme"
Issues = "https://github.com/Tobi-De/py-listmonk/issues"
Source = "https://github.com/Tobi-De/py-listmonk"

[tool.hatch.version]
path = "py_listmonk/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-httpx",
    "pre-commit",
    "python-dotenv"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=py_listmonk --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "py_listmonk/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
select = [
    "E", # https://github.com/charliermarsh/ruff#pycodestylet
    "F", # https://github.com/charliermarsh/ruff#pyflakes
    "UP", # https://github.com/charliermarsh/ruff#pyupgrade
    "N", # https://github.com/charliermarsh/ruff#pep8-naming
    "S", # https://github.com/charliermarsh/ruff#flake8-bandit
    "C", # https://github.com/charliermarsh/ruff#flake8-comprehensions
    "B", # https://github.com/charliermarsh/ruff#flake8-bugbear
    "T" # https://github.com/charliermarsh/ruff#flake8-print
]
extend-exclude = [
    "tests/*",
    "docs/*"
]
ignore = ["B008", "T201"]
